--- a/innovus-style.css
+++ b/innovus-style.css
@@ -65,7 +65,6 @@ body{
 }
 
 
-
  @media  (min-width:768px) {
 
     .stars{
@@ -89,7 +88,6 @@ body{
     border: none ;
     color: white ;
     font-weight: 500;
-    /* width: 100%; */
     box-shadow: inset 0 0 0 0 rgba(37,211,102,1) ;
     transition: ease-out 0.5s;
     background: rgba(37,211,102,1);
@@ -146,7 +144,6 @@ li a:hover{
     }
   }
 .review{
-    /* background-size: cover; */
     background-position: center;
     height: 100%;
     object-fit: cover;
@@ -175,24 +172,13 @@ li a:hover{
 }
 
 
-.bonus-img{
-    /* background-size: cover; */
+.bonus-img{ 
     background-position: center;
     height: 100%;
-    object-fit: cover;
-    /* border-radius: 50%; */
-    
+    width: 100%;
+    object-fit: cover;    
 }
 
-#bonus h5{
-    font-size: 1em!important;
-    font-weight:800;
-}
-/* #list-pro li i {
-    margin-right: 0.8em;
-    font-size: .9em;
-    font-weight: 800!important;
-} */
 
 li{
     list-style: none;
@@ -202,3 +188,100 @@ li{
     font-size: .9em;
     font-weight: 900!important;
 }
+
+
+.bonus-description p{
+    font-size: 0.8em;
+}
+
+.bonus-description h5{
+    font-size: 0.8em!important;
+    font-weight:800;
+}
+
+@media screen and (min-width: 320px) and (max-width:425px)   {
+    .bonus-description h5{
+        font-size: 0.8em!important;
+    }
+    .bonus-description h4{
+        font-size: 0.899em!important;
+    }
+
+    .review-img {
+        height: 3.5em;
+    }
+    .bonus-header p{
+        font-size: 0.797em;
+    }
+    .bonus-header .title-section{
+        font-size: 1em;
+    }
+  }
+
+  @media screen and (min-width: 425px) and (max-width:768px)   {
+    .bonus-description h5{
+        font-size: 0.9em!important;
+    }
+    .bonus-description h4{
+        font-size: 1.12em!important;
+    }
+
+    .review-img {
+        height: 3.5em;
+    }
+    .bonus-header p{
+        font-size: 0.89em;
+    }
+    .bonus-header .title-section{
+        font-size: 1.35em;
+    }
+  }
+
+    @media screen and (min-width: 442px) and (max-width:483px)   {
+        .review-img{
+            height: 4em;
+        }
+  }
+  
+  @media screen and (min-width: 483px) and (max-width:768px)   {
+    .review-img{
+        height: 4.7em;
+    }
+}
+@media screen and (min-width: 517px) and (max-width:768px)   {
+    .review-img{
+        height: 5em;
+    }
+}
+
+  @media screen and (min-width: 768px) and (max-width:992px)   {
+    .bonus-description h5{
+        font-size: 0.9em!important;
+    }
+    .bonus-description h4{
+        font-size: 1.12em!important;
+    }
+
+    .review-img {
+           height: 4em;
+    }
+    .bonus-header p{
+        font-size: 0.89em;
+    }
+    .bonus-header .title-section{
+        font-size: 1.35em;
+    }
+  }
+
+  
+  @media screen and (min-width: 1200px) {
+    .review-img{
+        height: 6em;
+    }
+
+  }
+
+
+
+
+
